force-app/main/default/objects/clcommon__Party__c/clcommon__Party__c.object-meta.xml
<CustomObject>
    <label>Party</label>
    <nameField>
        <displayFormat>PAR-{00000000}</displayFormat>
        <label>Party Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>