force-app/main/default/objects/clcommon__Party__c/fields/ABN_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>ABN_Company_Name__c</fullName>
    <label>ABN Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>