force-app/main/default/objects/clcommon__Party__c/fields/ABN_Effective_From_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>ABN_Effective_From_Rule_Check__c</fullName>
    <formula>IF(AND(IF(MONTH(TODAY())&gt;MONTH(DATEVALUE(ABN_Effective_From__c) ),YEAR(TODAY())-YEAR(DATEVALUE(ABN_Effective_From__c)),IF(AND(MONTH(TODAY())=MONTH(DATEVALUE (ABN_Effective_From__c)),DAY(TODAY())&gt;=DAY(DATEVALUE (ABN_Effective_From__c))),YEAR(TODAY())-YEAR(DATEVALUE(ABN_Effective_From__c)),(YEAR(TODAY())-YEAR(DATEVALUE(ABN_Effective_From__c)))-1))&lt;2,NOT(ISBLANK( DATEVALUE(ABN_Effective_From__c)))),&apos;TRUE&apos;,&apos;FALSE&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABN Effective From Rule Check</label>
    <type>Text</type>
</CustomField>