force-app/main/default/objects/clcommon__Party__c/fields/ABN_Effective_From_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>ABN_Effective_From_Warning_Check__c</fullName>
    <formula>IF(AND((genesis__Application__r.CL_Date__c - DATEVALUE(ABN_Effective_From__c))/365 &gt; 1, (genesis__Application__r.CL_Date__c - DATEVALUE(ABN_Effective_From__c))/365 &lt; 2), AND(Party_Type_Name__c &lt;&gt; &apos;Broker&apos;, Legal_Entity_Type__c &lt;&gt; &apos;Individual&apos;), FALSE)</formula>
    <label>ABN Effective From Warning Check</label>
    <type>Checkbox</type>
</CustomField>