force-app/main/default/objects/clcommon__Party__c/fields/ABN_Status_Commentary__c.field-meta.xml
<CustomField>
    <fullName>ABN_Status_Commentary__c</fullName>
    <label>ABN Status Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>