force-app/main/default/objects/clcommon__Party__c/fields/ABN_Status_Exp_Provided_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>ABN_Status_Exp_Provided_Warning_Check__c</fullName>
    <formula>IF(ISPICKVAL(Director__c, &apos;Yes&apos;), IF(Company_ABN_Status__c &lt;&gt; &apos;Registered&apos;, OR(ISPICKVAL(ABN_Status_Explanation_Provided__c, &apos;No&apos;), ISPICKVAL(ABN_Status_Explanation_Provided__c, &apos;&apos;)), FALSE), FALSE)</formula>
    <label>ABN Status Exp Provided Warning Check</label>
    <type>Checkbox</type>
</CustomField>