force-app/main/default/objects/clcommon__Party__c/fields/ABN_Status_Explanation_Provided__c.field-meta.xml
<CustomField>
    <fullName>ABN_Status_Explanation_Provided__c</fullName>
    <label>ABN Status Explanation Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>