force-app/main/default/objects/clcommon__Party__c/fields/Accountant_Name__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Name__c</fullName>
    <label>Accountant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>