force-app/main/default/objects/clcommon__Party__c/fields/Adverse_on_file__c.field-meta.xml
<CustomField>
    <fullName>Adverse_on_file__c</fullName>
    <label>Adverse on file</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>