force-app/main/default/objects/clcommon__Party__c/fields/Age_Check__c.field-meta.xml
<CustomField>
    <fullName>Age_Check__c</fullName>
    <formula>IF(  ISNULL( clcommon__Contact__r.Birthdate )  ||  clcommon__Contact__r.Age_of_Applicant__c  &lt; 45.0 , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Check</label>
    <type>Checkbox</type>
</CustomField>