force-app/main/default/objects/clcommon__Party__c/fields/Age_of_Credit_File__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Credit_File__c</fullName>
    <label>Age of Credit File</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>