force-app/main/default/objects/clcommon__Party__c/fields/Allow_Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Allow_Credit_Check__c</fullName>
    <label>Allow Credit Check</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>