force-app/main/default/objects/clcommon__Party__c/fields/AML_search_result__c.field-meta.xml
<CustomField>
    <fullName>AML_search_result__c</fullName>
    <formula>IF(INCLUDES( clcommon__Account__r.AML_search_result__c , &quot;PEP&quot;), &quot;PEP&quot;, NULL) + BR() +
IF(INCLUDES( clcommon__Account__r.AML_search_result__c , &quot;GWL&quot;), &quot;GWL&quot;, NULL) + BR() +
IF(INCLUDES( clcommon__Account__r.AML_search_result__c , &quot;Clear&quot;), &quot;Clear&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AML search result</label>
    <type>Text</type>
</CustomField>