force-app/main/default/objects/clcommon__Party__c/fields/Amount_of_Credit_Enquiries_in_last_12_mo__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Credit_Enquiries_in_last_12_mo__c</fullName>
    <label>Amount of Credit Enquiries in last 12 mo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>