force-app/main/default/objects/clcommon__Party__c/fields/Amount_of_Credit_Enquiries_in_more_than__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Credit_Enquiries_in_more_than__c</fullName>
    <label>Amt Credit Enquiries in more than 12 M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>