force-app/main/default/objects/clcommon__Party__c/fields/Amount_of_Credit_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Credit_Enquiry__c</fullName>
    <label>Amount of Credit Enquiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>