force-app/main/default/objects/clcommon__Party__c/fields/Amount_of_Payment_Defaults__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Payment_Defaults__c</fullName>
    <label>Amount of Payment Defaults</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>