force-app/main/default/objects/clcommon__Party__c/fields/Amount_Payment_Defaults_in_last_12_Month__c.field-meta.xml
<CustomField>
    <fullName>Amount_Payment_Defaults_in_last_12_Month__c</fullName>
    <label>Amount Payment Defaults in last 12 Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>