force-app/main/default/objects/clcommon__Party__c/fields/Amount_Payment_Defaults_in_more_than_12__c.field-meta.xml
<CustomField>
    <fullName>Amount_Payment_Defaults_in_more_than_12__c</fullName>
    <label>Amount Payment Defaults in more than 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>