force-app/main/default/objects/clcommon__Party__c/fields/Amt_con_enq_in_60m__c.field-meta.xml
<CustomField>
    <fullName>Amt_con_enq_in_60m__c</fullName>
    <label>Amt con enq in 60m</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>