force-app/main/default/objects/clcommon__Party__c/fields/Applicant_ever_declared_banckrupt__c.field-meta.xml
<CustomField>
    <fullName>Applicant_ever_declared_banckrupt__c</fullName>
    <label>Applicant ever declared banckrupt</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>