force-app/main/default/objects/clcommon__Party__c/fields/Applicant_experiencing_financial_stress__c.field-meta.xml
<CustomField>
    <fullName>Applicant_experiencing_financial_stress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applicant experiencing financial stress</label>
    <type>Checkbox</type>
</CustomField>