force-app/main/default/objects/clcommon__Party__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <formula>IF(ISBLANK(clcommon__Contact__c),clcommon__Account__r.Name+&apos; &apos;,IF(ISBLANK(clcommon__Contact__r.FirstName),&apos;&apos;,clcommon__Contact__r.FirstName+&apos; &apos;)+IF(ISBLANK(clcommon__Contact__r.MiddleName),&apos;&apos;,clcommon__Contact__r.MiddleName+&apos; &apos;)+IF(ISBLANK(clcommon__Contact__r.LastName),&apos;&apos;,clcommon__Contact__r.LastName+&apos; &apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Name</label>
    <type>Text</type>
</CustomField>