force-app/main/default/objects/clcommon__Party__c/fields/Applicant_Name_with_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name_with_Salutation__c</fullName>
    <formula>IF(ISBLANK(clcommon__Contact__c),clcommon__Account__r.Name+&apos; &apos;,((IF(ISPICKVAL(clcommon__Contact__r.Salutation,&apos;Mr.&apos;),&apos;Mr. &apos;,(IF(ISPICKVAL(clcommon__Contact__r.Salutation,&apos;Ms.&apos;),&apos;Ms. &apos;,(IF(ISPICKVAL(clcommon__Contact__r.Salutation,&apos;Mrs.&apos;),&apos;Mrs. &apos;,(IF(ISPICKVAL(clcommon__Contact__r.Salutation,&apos;Dr.&apos;),&apos;Dr. &apos;,(IF(ISPICKVAL(clcommon__Contact__r.Salutation,&apos;Prof.&apos;),&apos;Prof. &apos;,&apos;&apos;))))))))))+(IF(ISBLANK(clcommon__Contact__r.FirstName),&apos;&apos;,clcommon__Contact__r.FirstName+&apos; &apos;)+IF(ISBLANK(clcommon__Contact__r.MiddleName),&apos;&apos;,clcommon__Contact__r.MiddleName+&apos; &apos;)+IF(ISBLANK(clcommon__Contact__r.LastName),&apos;&apos;,clcommon__Contact__r.LastName+&apos; &apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Name with Salutation</label>
    <type>Text</type>
</CustomField>