force-app/main/default/objects/clcommon__Party__c/fields/Applicant_on_Probation__c.field-meta.xml
<CustomField>
    <fullName>Applicant_on_Probation__c</fullName>
    <label>Applicant on Probation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>