force-app/main/default/objects/clcommon__Party__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <formula>IF(ISPICKVAL(genesis__Application__r.genesis__Status__c,&apos;App Received&apos;),&apos;App Received&apos;, IF(ISPICKVAL(genesis__Application__r.genesis__Status__c,&apos;App Processed&apos;),&apos;App Processed&apos;, IF(ISPICKVAL(genesis__Application__r.genesis__Status__c,&apos;Conditional Assessed&apos;),&apos;Conditional Assessed&apos;,IF(ISPICKVAL(genesis__Application__r.genesis__Status__c, &apos;Conditionally Approved&apos;), &apos;Conditionally Approved&apos;,IF(ISPICKVAL(genesis__Application__r.genesis__Status__c,&apos;Conditional Accepted&apos;),&apos;Conditional Accepted&apos;,IF(ISPICKVAL(genesis__Application__r.genesis__Status__c, &apos;Assessment in Progress&apos;), &apos;Assessment in Progress&apos;, IF(ISPICKVAL(genesis__Application__r.genesis__Status__c, &apos;Recommended&apos;), &apos;Recommended&apos;, IF(ISPICKVAL(genesis__Application__r.genesis__Status__c, &apos;LOO Issued&apos;), &apos;LOO Issued&apos;, IF(ISPICKVAL(genesis__Application__r.genesis__Status__c, &apos;Formally Approved&apos;), &apos;Formally Approved&apos;, IF(ISPICKVAL(genesis__Application__r.genesis__Status__c, &apos;LOO Accepted&apos;), &apos;LOO Accepted&apos;, IF(ISPICKVAL(genesis__Application__r.genesis__Status__c, &apos;Loan Settled&apos;), &apos;Loan Settled&apos;,IF(ISPICKVAL(genesis__Application__r.genesis__Status__c, &apos;APPROVED&apos;), &apos;Approved&apos;, IF(ISPICKVAL(genesis__Application__r.genesis__Status__c, &apos;Declined&apos;), &apos;Declined&apos;, IF(ISPICKVAL(genesis__Application__r.genesis__Status__c, &apos;Cancelled&apos;), &apos;Cancelled&apos;,IF(ISPICKVAL(genesis__Application__r.genesis__Status__c, &apos;Solicitor Instructed&apos;),&apos;Solicitor Instructed&apos;,&apos;Approved - Converted to Contract&apos;)))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Status</label>
    <type>Text</type>
</CustomField>