force-app/main/default/objects/clcommon__Party__c/fields/ASIC_Extract_Date__c.field-meta.xml
<CustomField>
    <fullName>ASIC_Extract_Date__c</fullName>
    <label>ASIC Extract Date</label>
    <type>Date</type>
</CustomField>