force-app/main/default/objects/clcommon__Party__c/fields/Bank_Statement_Reviewed_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Bank_Statement_Reviewed_Rule_Check__c</fullName>
    <formula>IF(ISPICKVAL(Bank_Statements_Required_to_be_Reviewed__c,&apos;Yes&apos;),&apos;Render&apos;, &apos;Not Render&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Statement Reviewed Rule Check</label>
    <type>Text</type>
</CustomField>