force-app/main/default/objects/clcommon__Party__c/fields/Bank_Statements_Required_to_be_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Bank_Statements_Required_to_be_Reviewed__c</fullName>
    <label>Bank Statements Required to be Reviewed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>