force-app/main/default/objects/clcommon__Party__c/fields/Bank_Statments_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Bank_Statments_Reviewed__c</fullName>
    <label>Bank Statments Reviewed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>