force-app/main/default/objects/clcommon__Party__c/fields/bankrupt_discharged__c.field-meta.xml
<CustomField>
    <fullName>bankrupt_discharged__c</fullName>
    <label>Bankrupt Discharged</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>