force-app/main/default/objects/clcommon__Party__c/fields/Bankrupt_Discharged_Date_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Bankrupt_Discharged_Date_Warning_Check__c</fullName>
    <formula>IF(AND(ISPICKVAL(Applicant_ever_declared_banckrupt__c, &apos;Yes&apos;), ISPICKVAL(bankrupt_discharged__c, &apos;Yes&apos;)), (genesis__Application__r.CL_Date__c - Previously_Bankrupt_Discharge_Date__c)/30 &lt; 12, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bankrupt Discharged Date Warning Check</label>
    <type>Checkbox</type>
</CustomField>