force-app/main/default/objects/clcommon__Party__c/fields/Borrower_is_a_Staff_Member_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Borrower_is_a_Staff_Member_Rule_Check__c</fullName>
    <description>Borrower is a Staff Member Rule Check</description>
    <formula>IF(ISPICKVAL(Is_Borrower_Staff__c,&apos;&apos;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrower is a Staff Member Rule Check</label>
    <type>Checkbox</type>
</CustomField>