force-app/main/default/objects/clcommon__Party__c/fields/Broker_Trail_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Broker_Trail_Percentage__c</fullName>
    <formula>IF(clcommon__Type__r.Name == &#39;Broker&#39;, clcommon__Account__r.Broker_Trail_Percentage__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Trail Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>