force-app/main/default/objects/clcommon__Party__c/fields/Broker_Underwriter__c.field-meta.xml
<CustomField>
    <fullName>Broker_Underwriter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Underwriter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Parties (Broker Underwriter)</relationshipLabel>
    <relationshipName>Parties1</relationshipName>
    <type>Lookup</type>
</CustomField>