force-app/main/default/objects/clcommon__Party__c/fields/Broker_updated__c.field-meta.xml
<CustomField>
    <fullName>Broker_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broker updated</label>
    <type>Checkbox</type>
</CustomField>