force-app/main/default/objects/clcommon__Party__c/fields/Business_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Business_Applicant__c</fullName>
    <formula>IF((clcommon__Account__r.clcommon__Legal_Entity_Type__r.Name == &apos;Company&apos; || clcommon__Account__r.clcommon__Legal_Entity_Type__r.Name == &apos;Trust&apos; || clcommon__Account__r.clcommon__Legal_Entity_Type__r.Name == &apos;Family Trust&apos; || clcommon__Account__r.clcommon__Legal_Entity_Type__r.Name == &apos;SMSF&apos;) &amp;&amp; (Party_Type_Name__c != &apos;Solicitor&apos; || Party_Type_Name__c != &apos;Broker&apos; || Party_Type_Name__c != &apos;Aggregator&apos; || Party_Type_Name__c != &apos;Broker Underwriter&apos; || Party_Type_Name__c != &apos;Valuer&apos; || Party_Type_Name__c != &apos;Sales Channel&apos;),&apos;Business Party&apos;, &apos;Not Business Party&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Applicant?</label>
    <type>Text</type>
</CustomField>