force-app/main/default/objects/clcommon__Party__c/fields/CL_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>CL_Contract_ID__c</fullName>
    <formula>genesis__Application__r.CL_Contract__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CL Contract ID</label>
    <type>Text</type>
</CustomField>