force-app/main/default/objects/clcommon__Party__c/fields/clcommon__Account__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parties</relationshipLabel>
    <relationshipName>Parties</relationshipName>
    <type>Lookup</type>
</CustomField>