force-app/main/default/objects/clcommon__Party__c/fields/clcommon__Active__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field shall be used to specify if the Party associated with the Application is active/inactive.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>