force-app/main/default/objects/clcommon__Party__c/fields/clcommon__Contact__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Parties</relationshipLabel>
    <relationshipName>Parties</relationshipName>
    <type>Lookup</type>
</CustomField>