force-app/main/default/objects/clcommon__Party__c/fields/clcommon__Electronic_Consent__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Electronic_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Consent to receive documents/disclosures electronically</description>
    <inlineHelpText>Consent to receive documents/disclosures electronically</inlineHelpText>
    <label>Electronic Consent</label>
    <type>Checkbox</type>
</CustomField>