force-app/main/default/objects/clcommon__Party__c/fields/clcommon__Is_Customer_Identification_Program__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Is_Customer_Identification_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is to identify the party types who are a part of customer identification program.</description>
    <inlineHelpText>It is to identify the party types who are a part of customer identification program.</inlineHelpText>
    <label>Is Customer Identification Program</label>
    <type>Checkbox</type>
</CustomField>