force-app/main/default/objects/clcommon__Party__c/fields/clcommon__Is_Organization_Seal_Required__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Is_Organization_Seal_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate that the organization seal is required for the business entity.</description>
    <inlineHelpText>This field is used to indicate that the organization seal is required for the business entity.</inlineHelpText>
    <label>Is Organization Seal Required</label>
    <type>Checkbox</type>
</CustomField>