force-app/main/default/objects/clcommon__Party__c/fields/clcommon__Mortgagor__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Mortgagor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will identify the GRANTOR as a Mortgagor. Mortgagor is the owner of the collateral of type &quot;real estate&quot; that has a senior lien.</description>
    <inlineHelpText>This checkbox will identify the GRANTOR as a Mortgagor. Mortgagor is the owner of the collateral of type &quot;real estate&quot; that has a senior lien.</inlineHelpText>
    <label>Mortgagor</label>
    <type>Checkbox</type>
</CustomField>