force-app/main/default/objects/clcommon__Party__c/fields/clcommon__Related_Individual__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Related_Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created to pop up relationship with power of attorney.</description>
    <inlineHelpText>This field is created to pop up relationship with power of attorney.</inlineHelpText>
    <label>Related Individual</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Parties (Related Individual)</relationshipLabel>
    <relationshipName>Parties1</relationshipName>
    <type>Lookup</type>
</CustomField>