force-app/main/default/objects/clcommon__Party__c/fields/clcommon__Related_NonIndividual__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Related_NonIndividual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created to pop up relationship with power of attorney.</description>
    <inlineHelpText>This field is created to pop up relationship with power of attorney.</inlineHelpText>
    <label>Related NonIndividual</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parties (Related NonIndividual)</relationshipLabel>
    <relationshipName>Parties3</relationshipName>
    <type>Lookup</type>
</CustomField>