force-app/main/default/objects/clcommon__Party__c/fields/clcommon__Signer_Capacity__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Signer_Capacity__c</fullName>
    <label>Signer Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Officer</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Official</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Beneficiary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>