force-app/main/default/objects/clcommon__Party__c/fields/clcommon__Signing_on_Behalf_of__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Signing_on_Behalf_of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signing On Behalf Of</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parties (Signing on Behalf of)</relationshipLabel>
    <relationshipName>Parties1</relationshipName>
    <type>Lookup</type>
</CustomField>