force-app/main/default/objects/clcommon__Party__c/fields/clcommon__Trustee_Of__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Trustee_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is field is to store the trust account linked to the trustee.</description>
    <inlineHelpText>This is field is to store the trust account linked to the trustee.</inlineHelpText>
    <label>Trustee Of</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parties (Trustee Of)</relationshipLabel>
    <relationshipName>Parties2</relationshipName>
    <type>Lookup</type>
</CustomField>