force-app/main/default/objects/clcommon__Party__c/fields/clcommon__Type__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party Type</label>
    <referenceTo>clcommon__Party_Type__c</referenceTo>
    <relationshipLabel>Parties</relationshipLabel>
    <relationshipName>Parties</relationshipName>
    <type>Lookup</type>
</CustomField>