force-app/main/default/objects/clcommon__Party__c/fields/clcommon__Use_Electronic_Signature__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Use_Electronic_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will record consent to use the party&apos;s electronic signatures in the closing documents.</description>
    <inlineHelpText>This checkbox will record consent to use the party&apos;s electronic signatures in the closing documents.</inlineHelpText>
    <label>Use Electronic Signature</label>
    <type>Checkbox</type>
</CustomField>