force-app/main/default/objects/clcommon__Party__c/fields/Clothing_Personal_Care__c.field-meta.xml
<CustomField>
    <fullName>Clothing_Personal_Care__c</fullName>
    <inlineHelpText>Clothing,shoes,hair and beauty treatments,beauty and hygiene products</inlineHelpText>
    <label>Clothing &amp; Personal Care</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>