force-app/main/default/objects/clcommon__Party__c/fields/Commission_Paid_To__c.field-meta.xml
<CustomField>
    <fullName>Commission_Paid_To__c</fullName>
    <label>Commission Paid To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Aggregator</fullName>
            </value>
            <value>
                <fullName>Sub Aggregator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>