force-app/main/default/objects/clcommon__Party__c/fields/Commission_Structure__c.field-meta.xml
<CustomField>
    <fullName>Commission_Structure__c</fullName>
    <label>Commission Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upfront</fullName>
            </value>
            <value>
                <fullName>Trail</fullName>
            </value>
            <value>
                <fullName>Upfront &amp; Trail</fullName>
                <default>true</default>
                <label>Upfront &amp; Trail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>