force-app/main/default/objects/clcommon__Party__c/fields/Company_ABN_Status__c.field-meta.xml
<CustomField>
    <fullName>Company_ABN_Status__c</fullName>
    <label>Company ABN Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>