force-app/main/default/objects/clcommon__Party__c/fields/Company_Director_s_Adverse__c.field-meta.xml
<CustomField>
    <fullName>Company_Director_s_Adverse__c</fullName>
    <label>Company Director&apos;s Adverse</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>