force-app/main/default/objects/clcommon__Party__c/fields/Confirm_increased_Commission_Reason__c.field-meta.xml
<CustomField>
    <fullName>Confirm_increased_Commission_Reason__c</fullName>
    <label>Confirm increased Commission Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>