force-app/main/default/objects/clcommon__Party__c/fields/Confirm_Possible_Match_Credit_Report_Run__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Possible_Match_Credit_Report_Run__c</fullName>
    <label>Confirm Possible Match Credit Report Run</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>