force-app/main/default/objects/clcommon__Party__c/fields/Court_Action_Amount__c.field-meta.xml
<CustomField>
    <fullName>Court_Action_Amount__c</fullName>
    <label>Court Action Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>