force-app/main/default/objects/clcommon__Party__c/fields/Court_Actions__c.field-meta.xml
<CustomField>
    <fullName>Court_Actions__c</fullName>
    <label>Court Actions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>