force-app/main/default/objects/clcommon__Party__c/fields/Credit_Enquiry_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Enquiry_Amount__c</fullName>
    <label>Credit Enquiry Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>